bug(welcome-mat-overflow): tame height variance and finalize overflow settings

--- a/ui/components/welcome-mat/base/_index.scss
+++ b/ui/components/welcome-mat/base/_index.scss
@@ -49,6 +49,7 @@
  */
 .slds-welcome-mat__content {
   min-height: $welcome-mat-min-height;
+  max-height: $welcome-mat-max-height;
 }
 
 /**
